--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     name: cmb-ai-website
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=utf8&useSSL=false
     username: root
     password: 123456
 eureka:
@@ -22,15 +22,13 @@ eureka:
       defaultZone: http://localhost:8001/eureka
 
 #mybatis-plus
-mybatis-plus:
-  global-config:
-    db-config:
-      table-prefix: ms_
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-    map-underscore-to-camel-case: true
-  type-aliases-package: com.example.cmbaiwebsite
-  mapper-locations: classpath:mybatis/mapper/*Mapper.xml
+mybatis:
+  #标注mybatis配置文件的位置
+  config-location: classpath:mybatis-config.xml
+  #标注待解析的mapper的xml文件位置
+  mapper-locations: classpath:com.example.cmbaiwebsite.mapper/*.xml
+  #标注实体类位置
+  type-aliases-package: com.example.cmbaiwebsite.entity
 
 
 
